<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:paddingBottom="20dp"
        android:paddingRight="20dp"
        android:paddingLeft="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/audrey_signup_guide"
            style="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold"
            android:gravity="center"/>

        <Spinner
            android:id="@+id/state_origin_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:entries="@array/states"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/lga_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lga"
                android:singleLine="true"
                android:paddingLeft="10dp" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/address_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/address"
                android:singleLine="true"
                android:paddingLeft="10dp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/occupation_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/occupation"
                android:singleLine="true"
                android:paddingLeft="10dp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/spouse_fullname"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:layout_height="wrap_content"
                android:hint="@string/spouse_name"
                android:paddingLeft="10dp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/spouse_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:singleLine="true"
                android:hint="@string/spouse_phone"
                android:paddingLeft="10dp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/hospital_name"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:layout_height="wrap_content"
                android:hint="@string/hospital_name"
                android:paddingLeft="10dp" />

        </android.support.design.widget.TextInputLayout>

        <!--Consider making it spinner of states as up-->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/hostpital_state_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hospital_state"
                android:paddingLeft="10dp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/expected_date_of_delivery_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edd"
                android:paddingLeft="10dp"
                android:focusable="false" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:inputType="number"
                android:id="@+id/previous_children"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:hint="@string/previous_children"
                android:paddingLeft="10dp" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/submit_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/gradient"
            android:text="@string/get_audrey"
            android:textColor="@android:color/white"
            android:layout_marginTop="12dp"/>


    </LinearLayout>

</ScrollView>
