<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="30dp">

        <TextView
            android:id="@+id/contact_us"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact_us"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/colorPrimary"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_message"
            android:layout_below="@id/contact_us"
            android:gravity="center"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:layout_marginTop="10dp"/>

        <Button
            android:id="@+id/report_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:text="@string/file_report"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:textColor="@android:color/white"
            android:paddingStart="50dp"
            android:textAllCaps="false"
            android:paddingEnd="50dp"
            android:layout_marginBottom="20dp"/>



    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimaryDark"/>

        <TextView
            android:id="@+id/message_us"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/message_us"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/colorPrimary"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"/>

        <TextView
            android:id="@+id/tweet_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/message_us_msg"
            android:layout_below="@id/message_us"
            android:gravity="center"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:layout_marginTop="10dp"
            android:layout_margin="30dp"
            android:visibility="gone"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/message_us"
            android:layout_centerHorizontal="true"
            android:layout_margin="30dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/contact_facebook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:drawableStart="@drawable/ic_facebook_primary"
                android:drawablePadding="10dp"
                android:layout_margin="5dp"
                android:focusable="true"
                android:text="@string/audrey_facebook"
                android:textColor="@color/colorPrimaryDark" />

            <TextView
                android:id="@+id/contact_twitter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:drawableStart="@drawable/ic_twitter_primary"
                android:drawablePadding="10dp"
                android:layout_margin="5dp"
                android:focusable="true"
                android:text="@string/audrey_twitter"
                android:textColor="@color/colorPrimaryDark" />

            <TextView
                android:id="@+id/contact_instagram"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:drawableStart="@drawable/ic_instagram_primary"
                android:drawablePadding="10dp"
                android:layout_margin="5dp"
                android:focusable="true"
                android:text="@string/audrey_instagram"
                android:textColor="@color/colorPrimaryDark" />

            <TextView
                android:id="@+id/contact_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="email"
                android:clickable="true"
                android:drawableStart="@drawable/ic_mail_primary"
                android:drawablePadding="10dp"
                android:layout_margin="5dp"
                android:focusable="true"
                android:text="@string/audrey_email"
                android:textColorLink="@color/colorPrimaryDark" />

        </LinearLayout>


    </RelativeLayout>

</LinearLayout>